@@ -3,6 +3,9 @@ xx-xx-xx Francois Suter (Cobweb)  <typo3@cobweb.ch>
 	* Raised status to beta
 	* Released version 0.8.0
 
+08-12-16 Stephane Garchery (Cobweb) <typo3@cobweb.ch>
+  * Add set_time_limit option 
+
 08-12-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Corrected path to table icons
